[add] nginx log

--- a/nginx.conf
+++ b/nginx.conf
@@ -23,6 +23,8 @@ http {
     server {
         server_name _;
         listen  80  default_server;
+        access_log /var/log/nginx/access.log;
+        error_log /var/log/nginx/error.log;
         location / {
             client_max_body_size 10240M;
             proxy_pass              http://localhost:8000;
