--- a/nginx.conf
+++ b/nginx.conf
@@ -40,5 +40,9 @@ http {
             add_header  'Access-Control-Allow-Origin' '*';
             add_header  Cache-Control "no-cache, private, no-store, must-revalidate";
         }
+        error_page  404 /404.html;
+        location /404.html {
+            root /srv/uploader/templates;
+        }
     }
 }
