update nginx.conf CORS

--- a/nginx.conf
+++ b/nginx.conf
@@ -34,11 +34,19 @@ http {
             alias /srv/uploader/static;
         }
         location ~ ^/f/(?<filepath>.+)$ {
+            if ($request_method = 'OPTIONS') {
+                add_header  'Access-Control-Allow-Origin'   '*';
+                add_header  'Cache-Control' 'no-cache, private, no-store, must-revalidate';
+                add_header  'Access-Control-Allow-Headers'  '*';
+                return 204;
+            }
+
             autoindex   off;
             root        /srv/uploader/files;
             try_files   /$filepath =404;
             add_header  'Access-Control-Allow-Origin' '*';
             add_header  Cache-Control "no-cache, private, no-store, must-revalidate";
+            add_header  'Access-Control-Allow-Headers'  '*';
         }
         error_page  404 /404.html;
         location /404.html {
